--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="background-white-color">
   <mat-toolbar-row>
+     <button class="hamburger" fxShow="true" fxHide.gt-sm (click)="openMenu()" mat-icon-button>
+                    <mat-icon>menu</mat-icon>
+                </button>
     <span><img class="buildsupply-logo" src="../../../../assets/images/loginLogo.png" alt="logo"/></span>
     <span class="menu-spacer"></span>
 
