--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -115,11 +115,12 @@
                   <mat-form-field class="border-input">
                     <input
                       matInput
-                      type="number"
+                      type="text"
                       title=""
                       placeholder="GST %"
                       [(ngModel)]="material.Igst"
                       min="0"
+                      appTwoDigitDecimaNumber
                       (keyup)="valueChange(rfqSupplierDetailList)"
                     />
                   </mat-form-field>
@@ -146,11 +147,12 @@
                     <mat-form-field class="border-input">
                       <input
                         matInput
-                        type="number"
+                        type="text"
                         placeholder="Rate"
                         min="0"
                         title=""
                         [(ngModel)]="brand.tempRate"
+                        appTwoDigitDecimaNumber
                         (keyup)="valueChange(rfqSupplierDetailList)"
                       />
                       <small *ngIf="!brand.validBrand"  class="error-msg">Enter Valid Rate</small>
