--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -106,7 +106,8 @@
                   <input
                     matInput
                     formControlName="estimatedRate"
-                    type="number"
+                    type="text"
+                    appTwoDigitDecimaNumber
                     placeholder="Estimated Rate"
                     min="0"
                   />
@@ -118,7 +119,7 @@
               <th mat-header-cell *matHeaderCellDef>Quantity</th>
               <td mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                  <input matInput formControlName="quantity" type="number" placeholder="Quantity" min="0" onkeypress="return event.charCode >= 48 && event.charCode <= 57" />
+                  <input matInput formControlName="quantity" type="text" placeholder="Quantity" min="0" appTwoDigitDecimaNumber />
                 </mat-form-field>
               </td>
             </ng-container>
