Design and Froala Integrated In RFQ After Bids. Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -4,8 +4,10 @@
     <div class="row width-100">
       <div class="col-md-12">
         <div class="row p-b-10">
-          <div class="col-md-5 col-xs-12 p-t-10">
-            <label for="validity" class="pull-left p-t-20 p-r-10">Quote Valid till</label>
+          <div class="col-md-6 col-sm-6 col-xs-12 p-t-10">
+            <div>
+
+              <label for="validity" class="pull-left p-t-20 p-r-10">Quote Valid till</label>
 
             <mat-form-field class="border-input">
               <!-- <span class="form-placeholder">{{ dateDue | date: "dd-MMM-yyy" }}</span> -->
@@ -27,25 +29,30 @@
               <mat-datepicker #quoteValidTill startView="month" (keyup)="valueChange(rfqSupplierDetailList)"></mat-datepicker>
               <!-- startView="month" [startAt]="dueDate" -->
             </mat-form-field>
-            <small class="error-msg white-space-nowrap">{{showDateError}}</small>
+
+            </div>
+            <div *ngIf="showDateError != '' && showDateError!= null">
+            <small class="error-msg white-space-nowrap p-l-10">{{showDateError}}</small>
+            </div>
           </div>
 
-          <div class="col-md-5 col-xs-8 p-t-10">
+          <!-- <div class="col-md-5 col-xs-8 p-t-10">
             <label for="bidCompletion" class="pull-left p-t-20 p-r-10">Bid Completion:</label>
             <span class="pull-left text-semi-bold m-t-20">{{ brandCount }}/{{ materialCount }}</span>
 
             <span class="pull-right text-semi-bold m-t-20"> RFQ Expiry Date :: {{ rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy" }} </span>
-          </div>
+          </div> -->
 
-          <div class="col-md-2 col-xs-4 p-t-20">
-            <button
+          <div class="col-md-6 col-sm-6 col-xs-12 p-t-20">
+             <span class="pull-right text-semi-bold m-t-20"> RFQ Expiry Date :: {{ rfqSupplierDetailList.dueDate | date: "dd-MMM-yyy" }} </span>
+            <!-- <button
               mat-raised-button
               [disabled]="!submitButtonValidationFlag"
               class="main-background-color main-button color-white pull-right"
               (click)="postRFQDetailSupplier(rfqSupplierDetailList)"
             >
               Next
-            </button>
+            </button> -->
           </div>
         </div>
 
@@ -170,6 +177,46 @@
           </table>
         </div>
       </div>
+
     </div>
+
+    <div class="row width-100 p-t-10">
+        <div class="col-md-12">
+          <div class="text-align-center font-size20 text-semi-bold">
+            Comments
+          </div>
+          <form [formGroup]="poTerms">
+            <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms['textArea']">Hello, Froala!</textarea>
+          </form>
+        </div>
+        <div class="col-md-12 background-white-color border-radius parent">
+          <div class="word-wrap" *ngIf="rfqSupplierDetailList.comments && rfqSupplierDetailList.comments !== ''" [innerHTML]="rfqSupplierDetailList.comments"></div>
+          <div class="center-element" *ngIf="mode !== 'edit' && this.terms && terms.termsDesc == ''">No Comments To View</div>
+        
+        </div>
+    </div>
+
+  <div class="row width-100 p-t-10">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+          <div>
+             <label for="bidCompletion" class="pull-left p-t-20 p-r-10">Bid Completion:</label>
+              <span class="pull-left text-semi-bold m-t-20">{{ brandCount }}/{{ materialCount }}</span>
+          </div>
+            <div class="p-t-10 pull-right">
+               <button
+              mat-raised-button
+              [disabled]="!submitButtonValidationFlag"
+              class="main-background-color main-button color-white pull-right"
+              (click)="postRFQDetailSupplier(rfqSupplierDetailList)"
+            >
+              Next
+            </button>
+            </div>
+        </div>
+        <div class="col-lg-3"></div>
+    </div>
+
+
   </div>
 </div>
