--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -24,7 +24,7 @@
       <div class="main-div-po m-b-45">
         <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData"> </app-po-card>
       </div>
-      <app-po-table #poTable *ngIf="tableData.length" [poTableData]="tableData"> </app-po-table>
+      <app-po-table #poTable *ngIf="tableData.length" (QuantityAmountValidation)=QuantityAmountValidation($event) [poTableData]="tableData"> </app-po-table>
     </div>
     <div class="doc-froala-div">
       <div class="row">
