--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -140,7 +140,12 @@ input {
 .font-size14 {
   font-size: 14px;
 }
-
+.font-size9{
+   font-size: 9px;
+}
+.font-size10{
+   font-size: 10px;
+}
 .font-size12 {
   font-size: 12px;
 }
@@ -161,6 +166,9 @@ input {
 }
 .width78Percent{
   width:78%;
+}
+.max-width-128{
+  max-width: 128px;
 }
 
 .brand-view-style {
