--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -5,10 +5,10 @@
         <div class="update-info__popup p-4">
           <form class="update-info__form" *ngIf="userInfoForm" [formGroup]="userInfoForm" (ngSubmit)="submit()">
             <div class="row">
-              <div class="col-sm-11 col-md-11">
-                <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">Personal Information</h3>
+              <div class="col-xs-11 col-sm-11 col-md-11">
+                <h3 class="user-profile text-center text-uppercase pt-2 pb-4 profile" *ngIf="users">Personal Information</h3>
               </div>
-              <div class="col-sm-1 col-md-1">
+              <div class="col-xs-1 col-sm-1 col-md-1">
                 <button type="button" class="close pull-right p-t-5" (click)="redirectToDashboard()" aria-label="Close">
                   <span aria-hidden="true">×</span>
                 </button>
