--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -170,6 +170,9 @@ input {
 .max-width-128{
   max-width: 128px;
 }
+.min-width-128{
+  min-width: 128px;
+}
 
 .brand-view-style {
   background-color: $background-table-color-grey;
