--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -4,7 +4,7 @@
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
           <span>
-            <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="!getFormValidation()">
+            <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="( getFormValidation() ? (getFormQtyValidation() ? true : false) :  true )">
               Create P.O
             </button>
           </span>
@@ -64,7 +64,9 @@
                   <div class="p-0" *ngFor="let material of project.materialList; let m = index" [formGroupName]="m">
                     <section class="mat-row rfqbid-header-color">
                       <span class="col-sm-2">
-                        <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br /></div>
+                        <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br />
+                        <span *ngIf="!rfqForms.controls.forms['controls'][p].controls.materialList.controls[m].controls.validQtyBoolean.value" class="error-msg font-size9"> Net Quantity Should be less than {{material.poAvailableQty}} </span>
+                        </div>
                       </span>
                       <span class="col-sm-1">
                         {{ material.rfqMaterialQty }}
@@ -89,7 +91,8 @@
 
                     <ng-container formArrayName="supplierList">
                       <div class="mat-row supplierLevel" *ngFor="let supplier of material.supplierList; let s = index" [formGroupName]="s">
-                        <span class="col-sm-2">{{ supplier.supplierName }} </span>
+                        <span class="col-sm-2">{{ supplier.supplierName }} 
+                        </span>
                         <span class="col-sm-1"></span>
 
                         <div class="col-sm-9">
@@ -107,6 +110,7 @@
                                         formControlName="quantity"
                                         placeholder="qty"
                                         min="0"
+                                        (input)="getQuanityValidation(p,m)"
                                       />
                                     </mat-form-field>
                                   </ng-container>
